--- a/P004517.opf/layers/v001/Pagination.yml
+++ b/P004517.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: b71a05d2818942799865a33cde425812
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   d6111ca65e454871b7f2669b63812c39:
