--- a/P004517.opf/meta.yml
+++ b/P004517.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P004517
 initial_creation_type: ocr
+created_at: 29/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W1KG12171
   title: བར་དོའི་གསལ་འདེབས་ཐོས་གྲོལ་ཆེན་མོ་བཀླག་ཆོག་ཏུ་བཀོད་པ་འཁྲུལ་སྣང་རང་གྲོལ་དང་སྨོན་ལམ་ཁག་ཅིག
