--- a/P004517.opf/meta.yml
+++ b/P004517.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P004517
 initial_creation_type: ocr
 created_at: 29/03/2020
-last_modified_at: 24/11/2021
+last_modified_at: 2021-12-17 11:29:03.731981
 source_metadata:
   id: bdr:W1KG12171
   title: བར་དོའི་གསལ་འདེབས་ཐོས་གྲོལ་ཆེན་མོ་བཀླག་ཆོག་ཏུ་བཀོད་པ་འཁྲུལ་སྣང་རང་གྲོལ་དང་སྨོན་ལམ་ཁག་ཅིག
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 598
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
